# autoformation-fastapi-

./: .env  README.md  magasin.db  main.py  pyproject.toml  url.py
routers/: mail.py  securite.py
